--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,10 @@ __pycache__/
 error_calc.py
 camera-reprojection-error.py
 pokus.py
+pokus_1.py
 test_camera.py
 _TO_DO.txt
 
 saved_data_kamera_robot/
 data_sets/
+calibration_results/
